--- a/pols/netlify.toml
+++ b/pols/netlify.toml
@@ -1,8 +1,9 @@
+[build]
+  command = "npm run build"
+  publish = "dist"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build]
-  command = "npm run build"
-  publish = "dist" 
+  force = true 
